layout for small screens

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -194,6 +194,13 @@
         .zoom-button:hover {
             background: rgba(240, 240, 240, 0.95);
         }
+        
+        /* Mobile styles */
+        @media (max-width: 768px) {
+            #description-panel {
+                display: none;
+            }
+        }
     </style>
 </head>
 <body>
