--- a/visualization/index.html
+++ b/visualization/index.html
@@ -200,6 +200,10 @@
             #description-panel {
                 display: none;
             }
+            
+            #time-slider {
+                width: 250px;
+            }
         }
     </style>
 </head>
